--- a/flutter_local_notifications/android/build.gradle
+++ b/flutter_local_notifications/android/build.gradle
@@ -1,6 +1,6 @@
 group 'com.dexterous.flutterlocalnotifications'
 version '1.0-SNAPSHOT'
-
+ ext.kotlin_version = '1.6.0'
 buildscript {
     repositories {
         google()
